# Auto_Deli_Robot

./: .gitignore  .gitmodules  Developer_Packages.sh  LICENSE  Package_Install.sh  README.md  Robot_Packages.sh  requirement.txt
Back_Service/: Dev_Service_StartUp.sh  FieldTest_Service_StartUp.sh  GPS_Service_StartUp.sh  GUI_Service_StartUp.sh  README.md  ZED_Wrapper_StartUp.sh  rosbag.sh
Back_Service/service/: ros_dev_sev.service  ros_field_sev.service  ros_gps_sev.service  ros_gui_sev.service  ros_zed.service  roscore_sev.service
Help_Script/: README.md  home.sh  rosbag.sh
Project_Wiki/: README.md
Project_Wiki/Topic_Used/: Position_Topic.md  README.md
Project_Wiki/ZED_CAM/: README.md
ZED_CAM/: ZED_Topics.md
data_record/: pidtest.sh  rosbag.sh
mapviz_config/: config
src/: README.md
src/GPS_Module/: CMakeLists.txt  README_GPS.md  package.xml
src/Project_CORE/: CMakeLists.txt  package.xml
src/Test_Program/: CMakeLists.txt  package.xml
src/Test_Program/launch/: turtletest.launch
src/Test_Program/src/: add_two_ints_client.cpp  add_two_ints_server.cpp
src/autopilot/: CMakeLists.txt  package.xml
src/autopilot/launch/: autopilot.launch  autopilot_test.launch  odom_test.launch  setpose.launch  tf.launch
src/autopilot/src/: autopilot.py  autopilot_node.py  gps_tf2_utm.py  gradient_descent.py  loc_weighted_regression.py  matlab_test.py  odom_to_csv.py  public_algorithm.py  setpose.py  tangen_bug.py  utm_tf2_map.py
src/control_module/: CMakeLists.txt  package.xml
src/control_module/launch/: GUIComponent.launch  GUI_Bridge.launch  GUI_Fake_src.launch  GUI_Field_Src.launch  GUI_Src.launch  ZED_CAM_Web.launch
src/control_module/src/: index.html  webui.js
src/driver_module/: CMakeLists.txt  package.xml
src/driver_module/launch/: teleop_drive.launch
src/driver_module/scripts/: Base_Driver.py  Robot_Base_Driver.py  Robot_Base_Tester.py
src/emoji_screen/: CMakeLists.txt  package.xml
src/emoji_screen/launch/: emoji.launch
src/emoji_screen/src/: emoji.py  emoji_node.py
src/gps_module/: CMakeLists.txt  README_GPS.md  package.xml
src/gps_module/launch/: gps_driver_node.launch  gps_example.launch  gps_faker_node.launch  mapviz.launch
src/gps_module/src/: gps_faker_node.cpp  gps_talker_node.cpp
src/lidar_analysis_module/: CMakeLists.txt  package.xml
src/lidar_analysis_module/src/: lidar_analysis.py
src/lidar_module/: CMakeLists.txt  package.xml
src/lidar_module/launch/: Rplidar.launch  launch_lidar.launch  launch_line_extraction.launch  launch_rviz.launch
src/lidar_module/rviz/: rplidar.rviz
src/lidar_module/src/: lidar_avoid.cpp
src/lidar_slam/: CMakeLists.txt  package.xml
src/lidar_slam/launch/: lidar_slam.launch  lidar_slam_test.launch
src/lidar_slam/rviz_cfg/: lidar_slam.rviz
src/lidar_slam/src/: lidar_slam.h  lidar_slam_node.cpp  lidar_slam_pose_graph.h
src/object_detection_module/: CMakeLists.txt  package.xml
src/object_detection_module/scripts/: object_detection.py  object_detection_image_viewer.py
src/position_module/: CMakeLists.txt  package.xml
src/position_module/launch/: Localization.launch  MT3339GPS.launch  MapOdometry.launch  OdomOdometry.launch  PIDControl.launch  SerialGPS.launch  UbloxGPS.launch  fake_obstacle_avoidence.launch  gps_faker_node.launch  odom_faker_node.launch  path_faker_node.launch
src/position_module/launch/Unused_launch/: OdomOdometry.launch  mapviz.launch
src/position_module/pid_config/: pidConfig.json
src/position_module/scripts/: BNO055_IMU.py  position_processor.py
src/position_module/src/: NmeaGPSObject.cpp  NmeaGPSObject.h  PA1616S_GPS.cpp  SerialGPSDriver.cpp  SerialGPSObject.cpp  SerialGPSObject.h  SerialRTKGPSDriver.cpp  gps_faker_node.cpp  obs_faker_node.cpp  odom_faker_node.cpp  path_faker_node.cpp  pidController.cpp  pidController.h  pid_processor.cpp
src/position_module/src/pidAlgorithm/: pidRegulater.cpp  pidRegulater.h
src/project_core/: CMakeLists.txt  package.xml
src/project_core/launch/: Algorithm.launch  BaseDriver.launch  RobotCore.launch  Robot_StartUp.launch  Robot_StartUp_Full.launch  Rplidar.launch  ZEDCam.launch
src/project_core/launch/module_launch/: Algorithm.launch  BaseDriver.launch  Common_StartUp.launch  ZEDCam.launch  lidar_slam.launch  zed_camera.launch.xml
src/project_core/params/: zed2.yaml
src/project_core/src/: Avoidance.cpp  Avoidance.h  RobotCore.cpp  infoProcessor.cpp  infoProcessor.h
src/robot_msgs/: CMakeLists.txt  package.xml
src/robot_msgs/msg/: bounding3d_msg.msg  destPoint_msg.msg  dest_list_msg.msg  multi_objects_msg.msg  object_msg.msg
src/robot_msgs/srv/: ChangeSpeed.srv
src/slam_module/: CMakeLists.txt  package.xml
src/test_Program/: CMakeLists.txt  package.xml
src/test_Program/launch/: nodetalk.launch
src/test_Program/src/: add_two_ints_client.cpp
src/unused_module/object_detection_module/launch/: object_detection.launch
src/unused_module/test_Program/src/: add_two_ints_server.cpp
src/z_cam_module/: CMakeLists.txt  package.xml
