<?xml version="1.0"?>
<package format="2">
  <name>lidar_module</name>
  <version>0.0.0</version>
  <description>The lidar_module package</description>

  <maintainer email="crh0126@gmail.com">rex</maintainer>

  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rplidar_ros</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>laser_geometry</build_depend>
  <!-- <build_depend>eigen</build_depend> -->
  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>rplidar_ros</build_export_depend>
  <build_export_depend>laser_geometry</build_export_depend>
  <!-- <build_export_depend>eigen</build_export_depend> -->
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rplidar_ros</exec_depend>
  <exec_depend>laser_geometry</exec_depend>
  <!-- <exec_depend>eigen</exec_depend> -->

  <export>

  </export>
</package>
